# Trajectory-Generation-and-Following

./: CMakeLists.txt  README.md
include/: Scurve.h  cubic.h  cubicMultiViaPoint.h  cubic_via_point.h  parabolicBlend.h  quintUpdated.h  quintic.h  quinticMulitViapt.h  septic.h  septicUpdated.h  trajectories.h
include/trajectories/: trajectories.h
src/: Scurve.cpp  cubic.cpp  cubicMultiViaPoint.cpp  cubic_via_point.cpp  parabolicBlend.cpp  quintUpdated.cpp  quintic.cpp  quinticMulitViapt.cpp  septic.cpp  septicUpdated.cpp
